--- a/docs/dsandml/knn/index.qmd
+++ b/docs/dsandml/knn/index.qmd
@@ -35,7 +35,7 @@ We are given a set of data points $(\bar{x}_i,y_i)$ with $\bar{x}_i\in \mathbb{R
 5. For **regression**, the output is the average of the target values of $K$ neighbors
 
 
-### $K-$Nearest Neighbors Classification  
+### KNN Classification  
 
 The KNN classification algorithm can be summarized with the following steps:
 
@@ -193,10 +193,7 @@ So the complete test set would be
 | 7120   | 5         | 4          | 1453000   |          1  |  
 
 
-[Note: We did not scale the data before applying the classifier. If we scaled, the result might have been different (?). In practice, we need to scale the data before applying KNN algorithm. Because computing a large number of distances with big numbers may get us wrong order and also time cosuming.]{style="color:red"}
-
-
-### $K-$Nearest Neighbors Regression
+### KNN for Regression
 
 KNN regression is slightly different from classification. Instead of taking a majority vote, we predict the output by averaging the values of the **K** nearest neighbors.
 
@@ -225,72 +222,69 @@ Now we use the same training data and test data for this regression. But this ti
 | 5420   | 3         | 2.5        | 1         |             |  
 | 7120   | 5         | 4          | 1         |             |  
 
-
-After scaling the data looks like this  
-
-::: {#tb1-panel layout-ncol=2}
-| area    | bedroom | bathroom | condition | price   |
-|---------|---------|----------|-----------|---------|
-| 1.213   | 1.414   | 0.267    | 0.730     | 1300000 |
-| 1.336   | 0.000   | 1.603    | 0.730     | 1450000 |
-| -0.026  | -1.414  | -1.336   | -1.095    | 1110000 |
-| -1.261  | 0.000   | 0.267    | -1.095    | 1363400 |
-| -1.261  | 0.000   | -1.336   | 0.730     | 1263400 |
-
-: Training Data   
-
-| area    | bedroom | bathroom | condition | price |
-|---------|---------|----------|-----------|-------|
-| -1.266  | 0.000   | 0.803    | 0.730     |       |
-| 0.854   | 2.828   | 3.876    | 0.730     |       |
-   
-: Test Data 
-:::  
-
-
 Now we see that  
 
 \begin{align*}
-    d_1=d(x_1, x_t) & = \sqrt{(1.213 - (-1.266))^2 + (1.414 - 0)^2 + (0.267 - 0.803)^2 + (0.730 - 0.730)^2}  \approx 2.904\\
-    d_2=d(x_2, x_t) & = \sqrt{(1.336 - (-1.266))^2 + (0.000 - 0)^2 + (1.603 - 0.803)^2 + (0.730 - 0.730)^2} \approx 2.721\\
-    d_3=d(x_3, x_t) & = \sqrt{(-0.026 - (-1.266))^2 + (-1.414 - 0)^2 + (-1.336 - 0.803)^2 + (-1.095 - 0.730)^2}  \approx 3.382\\
-    d_4=d(x_4, x_t) & = \sqrt{(-1.261 - (-1.266))^2 + (0.000 - 0)^2 + (0.267 - 0.803)^2 + (-1.095 - 0.730)^2}  \approx 1.902\\
-    d_5=d(x_5, x_t) & = \sqrt{(-1.261 - (-1.266))^2 + (0.000 - 0)^2 + (-1.336 - 0.803)^2 + (0.730 - 0.730)^2} \approx 2.140 
+    d_1=d(x_1, x_t) & = \sqrt{(7420 - 5420)^2 + (4 - 3)^2 + (2 - 2.5)^2 + (1 - 1)^2} \approx 2000.06\\
+    d_2=d(x_2, x_t) & = \sqrt{(7520 - 5420)^2 + (3 - 3)^2 + (3 - 2.5)^2 + (1 - 1)^2} \approx 2100.12\\
+    d_3=d(x_3, x_t) & = \sqrt{(6420 - 5420)^2 + (2 - 3)^2 + (1 - 2.5)^2 + (0 - 1)^2} \approx 1000.05\\
+    d_4=d(x_4, x_t) & = \sqrt{(5423 - 5420)^2 + (3 - 3)^2 + (2 - 2.5)^2 + (0 - 1)^2} \approx 3.27\\
+    d_5=d(x_5, x_t) & = \sqrt{(5423 - 5420)^2 + (3 - 3)^2 + (1 - 2.5)^2 + (1 - 1)^2} \approx 3.87
 \end{align*}
 
-But this time, the order is $d_4<d_5<d_2<d_1<d_3$ and for $k=3$ we have $d_4<d_5<d_2$. The price for this distances  
+But this time, the order is $d_4<d_5<d_3<d_1<d_2$ and for $k=3$ we have $d_4<d_5<d_3$. The price for this distances  
 
 - For data point $x_4$, the `price`$=1363400$  
 - For data point $x_5$, the `price`$=1263400$  
-- For data point $x_2$, the `price`$=1450000$  
+- For data point $x_3$, the `price`$=1110000$  
 
 So the predicted price should be the average of this three prices, that for $xt=[5420,3,2.5,1]$ the price we expect  
 $$
-price = \frac{1363400+1263400+1450000}{3}=1358933.33
+price = \frac{1363400+1263400+1110000}{3}=1245600.00
 $$ 
 
 Here’s how to implement KNN for regression in Python from scratch and we see if we get the same as the hand calculation.
 
 ```{python}
 #| code-fold: false
-from sklearn.preprocessing import StandardScaler
 
 class CustomKNNRegressor:
     def __init__(self, k=3):
         self.k = k
 
     def fit(self, X_train, y_train):
-        self.X_train = X_train
-        self.y_train = y_train.to_numpy()
+        # Ensure X_train is always a NumPy array
+        if isinstance(X_train, pd.DataFrame):
+            self.X_train = X_train.to_numpy()
+        else:
+            self.X_train = X_train
+        
+        # y_train should be a flat array (vector)
+        if isinstance(y_train, pd.DataFrame) or isinstance(y_train, pd.Series):
+            self.y_train = y_train.to_numpy()
+        else:
+            self.y_train = y_train
 
     def predict(self, X_test):
+        # Ensure X_test is always a NumPy array
+        if isinstance(X_test, pd.DataFrame):
+            X_test = X_test.to_numpy()
+        
+        # Make predictions for each row in X_test
         predictions = [self._predict(x) for x in X_test]
         return np.array(predictions)
-    
+
     def _predict(self, x):
-        distances = [np.linalg.norm(x-x_train) for x_train in self.X_train]
+        # Compute distances between x and all training points
+        distances = [np.linalg.norm(x - x_train) for x_train in self.X_train]
+        
+        # Get the indices of the k nearest neighbors
         k_indices = np.argsort(distances)[:self.k]
+        
+        # Get the values of the k nearest neighbors
         k_nearest_values = [self.y_train[i] for i in k_indices]
+        
+        # Return the average of the k nearest values
         return np.mean(k_nearest_values)
 
 X_train = train_data.drop('price', axis=1)
@@ -307,18 +301,13 @@ test_data = pd.DataFrame(
 
 X_test = test_data
 
-scaler = StandardScaler()
-
-X_train_sc = scaler.fit_transform(X_train)
-X_test_sc = scaler.transform(X_test)
-
 # Initialize and train the KNN regressor
 regressor = CustomKNNRegressor(k=3)
-regressor.fit(X_train_sc, y_train)
+regressor.fit(X_train, y_train)
 
 # Predict on test data
-predictions = regressor.predict(X_test_sc)
-print(np.round(predictions,2))
+predictions = regressor.predict(X_test)
+print(predictions)
 
 ```
 
@@ -351,184 +340,243 @@ The default metric for KNN is **Euclidean distance**, but depending on the datas
 
 ### KNN Implementation  
 
-In this section we use KNN regression for `Boston Housing` dataset and find the optimal $K$ using the `KFold` cross-validation. 
+In this section we use KNN regression for `California Housing` dataset and find the optimal $K$ using the `KFold` cross-validation. We als use two distance metrices to compare which one gives better accuracy.  
 
 ```{python}
 #| code-fold: false
-df = pd.read_csv('HousingData.csv')
+from sklearn.datasets import fetch_california_housing
+housing = fetch_california_housing()
+X = pd.DataFrame(data = housing['data'], columns = housing['feature_names'])
+y = pd.DataFrame(data = housing['target'], columns = housing['target_names'])
+df = pd.concat([X,y], axis=1)
+df.head()
 ```  
 
-Next we see if there is any missing values. If we have any, we will skip those observations. 
+Next we see if there is any missing values  
 
 ```{python}
 #| code-fold: false
-print(df.isnull().sum())
-df.dropna(axis=1,inplace=True)
-df.head()
+df.isnull().sum()
 ```  
 
 <p style="text-align:justify">
 The data looks clean and ready to implement to the KNNRegressor. Note that, for predictive modeling we need a lot of things, such as exporatory data analysis (EDA), feature engineering, preprocessing and others. However, we will simply apply the `KNNRegressor` that we built from scratch and built-in library function from `scikit-learn` to explore the algorithm and find the optimal $K$.
-</p>  
+</p>
 
 ```{python}
 #| code-fold: false
 from sklearn.model_selection import KFold, train_test_split
-from sklearn.metrics import mean_squared_error,r2_score
-import matplotlib.pyplot as plt 
-
-
-X = df.drop('MEDV',axis=1)
-y = df['MEDV']
+from sklearn.metrics import mean_squared_error
 
 X_train, X_test, y_train, y_test = train_test_split(
     X,y, test_size=0.30, random_state=123
 )
-scaler = StandardScaler()
-X_train_sc = scaler.fit_transform(X_train)
-X_test_sc = scaler.transform(X_test)
 
-k_values = [5,15,30,40]
+k_values = [5,8,11,15]
 
 kfold = KFold(n_splits=7, shuffle=True, random_state=123)
 mses = np.zeros((7,4))
 
-for i,(train_index,test_index) in enumerate(kfold.split(X_train_sc)):
-    X_train_train = X_train_sc[train_index]
-    X_train_holdout = X_train_sc[test_index]
+for i,(train_index, test_index) in enumerate(kfold.split(X_train)):
+    X_train_train = X_train.iloc[train_index]
+    X_train_holdout = X_train.iloc[test_index]
 
     y_train_train = y_train.iloc[train_index]
     y_train_holdout = y_train.iloc[test_index]
 
     for j,k in enumerate(k_values):
-        regressor1 = CustomKNNRegressor(k=k)
-        regressor1.fit(X_train_train, y_train_train)
-        preds = regressor1.predict(X_train_holdout)
-        mses[i,j] = mean_squared_error(preds, y_train_holdout)
+        knn_regression = CustomKNNRegressor(k=k)
+        knn_regression.fit(X_train_train, y_train_train)
+        preds = knn_regression.predict(X_train_holdout)
+        mses[i,j] = mean_squared_error(y_train_holdout, preds)
+print(mses)
+```
 
-plt.scatter(np.zeros(7),mses[:,0], s=60, c='white', edgecolors='black', label='Single Split')
-plt.scatter(np.ones(7),mses[:,1],s=60, c='white', edgecolors='black')
-plt.scatter(2*np.ones(7),mses[:,2],s=60, c='white', edgecolors='black')
-plt.scatter(3*np.ones(7),mses[:,3],s=60, c='white', edgecolors='black')
-plt.scatter([0,1,2,3], np.mean(mses, axis=0), s=60,c='r', marker='X', label='Mean')
-plt.legend(loc='upper right')
-plt.xticks([0,1,2,3],['K=5','K=15','K=30','K=40'])
-plt.ylabel('MSE')
-plt.gca().set_facecolor('#f4f4f4')
-plt.gcf().patch.set_facecolor('#f4f4f4')
+### Conclusion
+
+K-Nearest Neighbors is a simple, intuitive algorithm that can be highly effective in both classification and regression problems. Its simplicity comes from the fact that it doesn't make any assumptions about the underlying data distribution (it's non-parametric). However, its performance can be sensitive to the choice of **K** and the distance metric.
+
+The implementations of KNN from scratch for both classification and regression have helped us understand the algorithm’s mechanics. Although it's easy to implement, KNN can become computationally expensive for large datasets, as it requires calculating distances between the test point and all training samples.
+
+If you need an efficient version, it's always possible to use optimized libraries like scikit-learn, but writing the algorithm from scratch helps build a solid understanding.
+
+For classification problems, the class is determined by the vote of its neighbors. For a regression problem the response $y$ is calculated by the weighted average of the sorted $K$-th distances. For example, if $k=4$ and the shorted distances are $d_1<d_3<d_2<d_4$ then $y=(d_1+d_3+d_2+d_4)/2$  
+
+## $K$NN Implementation: Regression
+
+```{python}
+#| code-fold: false
+import numpy as np 
+import matplotlib.pyplot as plt
+
+np.random.seed(123)
+X = 2*np.random.normal(size=(100,1))
+y = (np.cos(X)+0.3*np.random.normal(size=X.shape)).reshape(-1)
+# First 5 entries in X
+X[:5]
+# First 5 entries in y
+y[:5]
+
+# Plot of the data
+plt.scatter(X,y)
+plt.gca().set_facecolor('#f4f4f4') 
+plt.gcf().patch.set_facecolor('#f4f4f4') 
 plt.show()
 ```  
 
-So, $K=5$ seems optimal based on our custom built regressor. Now if we do the same thing using the `scikit-learn` library  
+Now we fit two models for two different $K$ values to see how it affects the interpolation.  
 
 ```{python}
 #| code-fold: false
 from sklearn.neighbors import KNeighborsRegressor
+knn_3 = KNeighborsRegressor(3)
+knn_9 = KNeighborsRegressor(9)
 
+knn_3.fit(X,y)
+knn_9.fit(X,y)
 
-mses = np.zeros((7,4))
+fig, ax = plt.subplots(1,2, figsize=(9,5), sharex=True, sharey=True)
+ax[0].scatter(X,y, alpha=0.5, label="Sample Data")
+ax[1].scatter(X,y, alpha=0.5, label="Sample Data")
+ax[0].plot(
+    np.linspace(np.min(X)-1,np.max(X)+1,200).reshape(-1,1),
+    knn_3.predict(np.linspace(np.min(X)-1,np.max(X)+1,200).reshape(-1,1)),
+    'k',
+    label='KNR'
+)
+ax[0].set_title('$k=3$')
+ax[0].set_facecolor('#f4f4f4')
+ax[0].patch.set_facecolor('#f4f4f4')
 
-for i,(train_index,test_index) in enumerate(kfold.split(X_train_sc)):
-    X_train_train = X_train_sc[train_index]
-    X_train_holdout = X_train_sc[test_index]
+ax[1].plot(
+    np.linspace(np.min(X)-1,np.max(X)+1,200).reshape(-1,1),
+    knn_9.predict(np.linspace(np.min(X)-1,np.max(X)+1,200).reshape(-1,1)),
+    'k',
+    label='KNR'
+)
+ax[1].set_title('$k=9$')
+ax[1].set_facecolor('#f4f4f4')
+ax[1].patch.set_facecolor('#f4f4f4')
 
-    y_train_train = y_train.iloc[train_index]
-    y_train_holdout = y_train.iloc[test_index]
-
-    for j,k in enumerate(k_values):
-        regressor2 = KNeighborsRegressor(k)
-        regressor2.fit(X_train_train, y_train_train)
-        preds = regressor2.predict(X_train_holdout)
-        mses[i,j] = mean_squared_error(preds, y_train_holdout)
-
-plt.scatter(np.zeros(7),mses[:,0], s=60, c='white', edgecolors='black', label='Single Split')
-plt.scatter(np.ones(7),mses[:,1],s=60, c='white', edgecolors='black')
-plt.scatter(2*np.ones(7),mses[:,2],s=60, c='white', edgecolors='black')
-plt.scatter(3*np.ones(7),mses[:,3],s=60, c='white', edgecolors='black')
-plt.scatter([0,1,2,3], np.mean(mses, axis=0), s=60,c='r', marker='X', label='Mean')
-plt.legend(loc='upper right')
-plt.xticks([0,1,2,3],['K=5','K=15','K=30','K=40'])
-plt.ylabel('MSE')
-plt.gca().set_facecolor('#f4f4f4')
-plt.gcf().patch.set_facecolor('#f4f4f4')
 plt.show()
 ```  
 
-In both method, we got $K=5$ is the optimal number of neighbors for KNN regression. Let's apply this in our test dataset  
+
+
+## $K$NN Implementation: Classification  
+
+For this classification problem, we choose that famous iris data from the `scikit-learn` library.  
 
 ```{python}
 #| code-fold: false
-regressor = CustomKNNRegressor(k=5)
-regressor.fit(X_train_sc, y_train)
+from sklearn import datasets
 
-predictions = regressor.predict(X_test_sc)
 
-mse = mean_squared_error(predictions,y_test)
-rsquared = r2_score(predictions,y_test)
-print('MSE = {}'.format(np.round(mse,2)),' and R-square = {}'.format(np.round(rsquared,2)))
+# Load the data
+iris = datasets.load_iris()
+X,y = iris.data, iris.target
+
+# First 5 entries of the features  
+X[:5,:5]
 ```
 
+```{python}
+#| code-fold: false
+# First 5 entries of the target values
+
+y[:5]
+```
+
+There are total 150 observations of $X$ and $y$ and the scatter plot of the data  
+
+```{python}
+#| code-fold: false
+# Scatter plot 
+_, ax =  plt.subplots()
+scatter = ax.scatter(iris.data[:,0],
+            iris.data[:,1],
+            c=iris.target
+        )
+ax.set(xlabel=iris.feature_names[0],
+       ylabel=iris.feature_names[1]
+)
+_ = ax.legend(
+    scatter.legend_elements()[0],
+    iris.target_names, 
+    loc="lower right",
+    title="Classes"
+)
+plt.gca().set_facecolor('#f4f4f4') 
+plt.gcf().patch.set_facecolor('#f4f4f4') 
+```  
+
+We can use the `KNeighborsClassifier` class from the  `sklearn` library or make a custom classifier. 
+
+### KNeighborsClassifier: sklearn Libarary  
+
+```{python}
+#| code-fold: false
+from sklearn.neighbors import KNeighborsClassifier
+from sklearn.model_selection import train_test_split
+from sklearn.metrics import accuracy_score
+
+X_train, X_test, y_train, y_test = train_test_split(
+    X, y, test_size=0.33, random_state=42) 
+
+sklern_clf = KNeighborsClassifier(n_neighbors=5) # 5 is the default number
+sklern_clf.fit(X_train,y_train)
+pred = sklern_clf.predict(X_test)
+acc = accuracy_score(y_test,pred)
+print('Classification Accuracy: ',acc)
+```
+
+### KNeighborsClassifier: custom Libarary  
+
+This is a custom made KNN classifier (code credit goes to [AssemblyAI](https://www.youtube.com/watch?v=rTEtEy5o3X0&t=307s)). Let's use this to classify the iris dataset.  
+
+```python
+import numpy as np
+from collections import Counter
 
 
-
-### Conclusion
-
-<p style="text-align: justify">
-K-Nearest Neighbors is a simple, intuitive algorithm that can be highly effective in both classification and regression problems. Its simplicity comes from the fact that it doesn't make any assumptions about the underlying data distribution (it's non-parametric). However, its performance can be sensitive to the choice of **K** and the distance metric.
-<br>
-<br>
-Although it's easy to implement, KNN can become computationally expensive for large datasets, as it requires calculating distances between the test point and all training samples.
-<br>
-<br>
-If you need an efficient version, it's always possible to use optimized libraries like scikit-learn, but writing the algorithm from scratch helps build a solid understanding.
-</p>
-
-### When to Use KNN Over Linear Regression?
-
-We would consider using KNN regression over linear regression in the following situations:  
-
-- **Non-linear relationships**: When the data shows non-linear patterns or complex relationships between features and target variables that cannot be captured by a straight line.  
-- **Local behavior**: When data has local patterns or clusters, and you believe that predictions should rely on the nearest data points.  
-- **Minimal assumptions**: If you do not want to assume a specific relationship between the features and target, KNN’s non-parametric nature might be more appropriate.  
-- **Smaller datasets**: KNN works well with smaller datasets and lower-dimensional data where calculating distances is feasible and efficient.
-
-However, KNN becomes less efficient and struggles in high dimensions or when the dataset is large. In those cases, linear regression or other more scalable models may be more appropriate  
-
----  
-
-## References  
+def distance(x1, x2):
+    return np.sqrt(np.sum((x1-x2)**2))
 
 
-1. **KNN Regressor Overview:**
-   - Géron, Aurélien. *Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow: Concepts, Tools, and Techniques to Build Intelligent Systems*. O'Reilly Media, 2019. This book provides an in-depth explanation of KNN, including its behavior in non-linear data and high-dimensionality challenges.
-   - Bishop, Christopher M. *Pattern Recognition and Machine Learning*. Springer, 2006. This book covers non-parametric methods like KNN, highlighting the "curse of dimensionality" and distance-based approaches.
+class KNNClassifier:
+    def __init__(self, k=3):
+        self.k = k
 
-2. **KNN vs. Linear Regression (Model Assumptions & Complexity of Data):**
-   - Hastie, Trevor, Tibshirani, Robert, and Friedman, Jerome. *The Elements of Statistical Learning: Data Mining, Inference, and Prediction*. Springer, 2009. This source discusses the assumptions behind linear regression and the flexibility of non-parametric models like KNN.
-   - Kuhn, Max, and Johnson, Kjell. *Applied Predictive Modeling*. Springer, 2013. The comparison between parametric (like linear regression) and non-parametric models (like KNN) is elaborated in this book.
+    def fit(self, X, y):
+        self.X_train = X
+        self.y_train = y
 
-3. **Interpretability:**
-   - Molnar, Christoph. *Interpretable Machine Learning: A Guide for Making Black Box Models Explainable*. 2019. This book emphasizes the trade-offs between interpretable models like linear regression and more black-box models like KNN.
-   - Murdoch, W. James, et al. "Definitions, methods, and applications in interpretable machine learning." *Proceedings of the National Academy of Sciences* 116.44 (2019): 22071-22080.
+    def predict(self, X):
+        predictions = [self._prediction(x) for x in X]
+        return predictions
 
-4. **Sensitivity to Outliers:**
-   - Aggarwal, Charu C. *Data Classification: Algorithms and Applications*. Chapman and Hall/CRC, 2014. This discusses the impact of outliers on different models, including linear regression and KNN.
-   - Friedman, Jerome, et al. *The Elements of Statistical Learning*. Springer Series in Statistics, 2001. Sensitivity to outliers is compared across various regression techniques, including KNN.
+    def _prediction(self, x):
+        distances = [distance(x, x_train) for x_train in self.Xtrain]
+        knn_indices = np.argsort(distances)[:self.k]
+        knn_labels = [self.y_train[i] for i in knn_indices]
 
-5. **Handling High-Dimensional Data:**
-   - Domingos, Pedro. "A few useful things to know about machine learning." *Communications of the ACM* 55.10 (2012): 78-87. This paper discusses challenges like the curse of dimensionality in models like KNN.
-   - Verleysen, Michel, and François, Damien. "The curse of dimensionality in data mining and time series prediction." *International Work-Conference on Artificial Neural Networks*. Springer, 2005.
+        # majority vote
+        most_common = Counter(knn_labels).most_common()
+        return most_common[0][0]
+```  
 
-6. **Training and Prediction Time:**
-   - Shalev-Shwartz, Shai, and Ben-David, Shai. *Understanding Machine Learning: From Theory to Algorithms*. Cambridge University Press, 2014. Provides insights into the computational cost differences between linear and non-parametric models like KNN.
-   - Li, Zhe, et al. "Fast k-nearest neighbor search using GPU." *International Conference on Image and Graphics*. Springer, 2015. This paper discusses computational complexity related to KNN.
+Save the above file as `knn.py` in the same directory. Then
 
-7. **Overfitting and Flexibility:**
-   - Yao, Ying, et al. "Overfitting and Underfitting: A Visual Explanation." Towards Data Science, 2019. Offers a visual and intuitive explanation of the bias-variance tradeoff in KNN and linear models.
-   - Rasmussen, Carl E., and Williams, Christopher KI. *Gaussian Processes for Machine Learning*. MIT Press, 2006. Discusses overfitting in KNN due to small values of `k` and regularization techniques for linear models.
+```{python}
+#| code-fold: false
+from knn import KNNClassifier
 
-
----
+customknn_clf = KNNClassifier(k=5)
+customknn_clf.fit(X_train,y_train)
+pred = customknn_clf.predict(X_test)
+acc = accuracy_score(y_test,pred)
+print('Classification Accuracy: ',acc)
+```
 
 
 
