--- a/dsandml/knn/index.qmd
+++ b/dsandml/knn/index.qmd
@@ -539,20 +539,20 @@ However, KNN becomes less efficient and struggles in high dimensions or when the
  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
  
 <div class="share-buttons">
-<div class="fb-share-button" data-href="https://mrislambd.github.io/machinelearning/knn/"
+<div class="fb-share-button" data-href="https://mrislambd.github.io/dsandml/knn/"
 data-layout="button_count" data-size="small"><a target="_blank" 
- href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fmachinelearning%2Fknn%2F&amp;src=sdkpreparse" 
+ href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fdsandml%2Fknn%2F&amp;src=sdkpreparse" 
  class="fb-xfbml-parse-ignore">Share</a></div>
 
 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
-<script type="IN/Share" data-url="https://mrislambd.github.io/machinelearning/knn/"></script> 
+<script type="IN/Share" data-url="https://mrislambd.github.io/dsandml/knn/"></script> 
  
 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" 
- data-url="https://mrislambd.github.io/machinelearning/knn/" data-show-count="true">Tweet</a>
+ data-url="https://mrislambd.github.io/dsandml/knn/" data-show-count="true">Tweet</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 
-<div class="fb-comments" data-href="https://mrislambd.github.io/machinelearning/knn/"
+<div class="fb-comments" data-href="https://mrislambd.github.io/dsandml/knn/"
  data-width="" data-numposts="5"></div>
 
 
