--- a/dsandml/logreg/index.qmd
+++ b/dsandml/logreg/index.qmd
@@ -220,17 +220,108 @@ Now let's use this using the `scikit-learn` breast cancer data set.
 ```{python}
 #| code-fold: false
 #| warning: false
+import pandas as pd
 from sklearn.datasets import load_breast_cancer
 from sklearn.model_selection import train_test_split
 from sklearn.metrics import accuracy_score
 
 b_cancer = load_breast_cancer()
-X,y = b_cancer.data, b_cancer.target
+X, y = b_cancer.data, b_cancer.target
 X_train, X_test, y_train, y_test = train_test_split(X,y, random_state=123, stratify=y, test_size=0.30)
 
-clf1 = LogisticRegression1()
+clf1 = LogisticRegression1(learning_rate=0.01)
 clf1.fit(X_train, y_train)
 predicted_y = clf1.predict(X_test)
 print(np.round(accuracy_score(predicted_y, y_test),2))
 ```  
+
+Now lets compare this with the standard `scikit-learn` library  
+
+```{python}
+#| warning: false
+from sklearn.linear_model import LogisticRegression
+
+clf2 = LogisticRegression()
+clf2.fit(X_train, y_train)
+predicted_y = clf2.predict(X_test)
+print(np.round(accuracy_score(predicted_y, y_test),2))
+```  
+
+
+## References
+
+- Bishop, C. M. (2006). *Pattern Recognition and Machine Learning*. Springer.
+- Hastie, T., Tibshirani, R., & Friedman, J. (2009). *The Elements of Statistical Learning: Data Mining, Inference, and Prediction*. Springer.
+- Gradient descent is a widely used optimization technique in machine learning.
+- Goodfellow, I., Bengio, Y., & Courville, A. (2016). *Deep Learning*. MIT Press.
+- Nocedal, J., & Wright, S. (2006). *Numerical Optimization* (2nd ed.). Springer.
+- Regularization techniques like L2 (Ridge) and L1 (Lasso) are commonly used in logistic regression to prevent overfitting.
+- Ng, A. (2004). *Feature Selection, L1 vs. L2 Regularization, and Rotational Invariance*. ICML Proceedings.
+- Friedman, J., Hastie, T., & Tibshirani, R. (2010). *Regularization Paths for Generalized Linear Models via Coordinate Descent*. Journal of Statistical Software, 33(1), 1-22.
+- The extension of logistic regression to multiclass classification via the softmax function is part of the core material for understanding classification tasks.
+- Murphy, K. P. (2012). *Machine Learning: A Probabilistic Perspective*. MIT Press.
+- Bishop, C. M. (2006). *Pattern Recognition and Machine Learning*. Springer.
+- VanderPlas, J. (2016). *Python Data Science Handbook: Essential Tools for Working with Data*. O'Reilly Media.
+- Raschka, S., & Mirjalili, V. (2017). *Python Machine Learning: Machine Learning and Deep Learning with Python, scikit-learn, and TensorFlow 2*. Packt Publishing.
+
+
+
+---
+
+**Share on**   
+
+
+::::{.columns}
+:::{.column width="10%"}
+<a href="https://www.facebook.com/sharer.php?u=https://www.mrislambd.github.io/dsandml/logreg" target="_blank" style="color:#1877F2; text-decoration: none;">
+ 
+{{< fa brands facebook size=3x >}}
+</a>
+ 
+:::
+ 
+:::{.column width="10%"}
+<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://www.mrislambd.github.io/dsandml/logreg" target="_blank" style="color:#0077B5; text-decoration: none;">
+ 
+{{< fa brands linkedin size=3x >}}
+</a>
+ 
+:::
+ 
+:::{.column width="10%"}
+<a href="https://www.twitter.com/intent/tweet?url=https://www.mrislambd.github.io/dsandml/logreg" target="_blank" style="color:#1DA1F2; text-decoration: none;">
+ 
+{{< fa brands twitter size=3x >}}
+</a>
+ 
+:::
+::::
+ 
+<script src="https://giscus.app/client.js"
+        data-repo="mrislambd/mrislambd.github.io" 
+        data-repo-id="R_kgDOMV8crA"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOMV8crM4CjbQW"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="light"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
+ 
+<div class="fb-comments" data-href="https://mrislambd.github.io/dsandml/logreg/"
+ data-width="" data-numposts="5" data-width="800"></div>
+
+---
+
+**You may also like**  
+
+
 
