--- a/posts/machinelearning/index.qmd
+++ b/posts/machinelearning/index.qmd
@@ -23,6 +23,168 @@ listing:
     This page is my personal repository of most common and useful machine learning algorithms using Python and other data science tricks and tips.
 </p>  
 
+## **$\text{\textcolor{#782F40}{Data Science}}$**  
+Data science involves extracting knowledge from structured and unstructured data. It combines principle from statistics, machine learning, data analysis, and domain knoledge to understand and interpret the data
+
+#### Data Collection \& Accuisition  
+
+- **[Web srcaping](/dsandml/datacollection/index.qmd){target="_blank" style="text-decoration:none"}:** Data collection through Webscraping  
+- API integration  
+- Data Lakes, Data Warehouses  
+
+#### Data Cleaning \& Preprocessing  
+
+- Handling Missing Values  
+- Data Transformation  
+- Feature Engineering and Selection  
+- Encoding Categorical Variables  
+- Handling Outliers  
+
+#### Exploratory Data Analysis (EDA)  
+
+- Descriptive Statistics  
+- Data Visualization  
+- Identifying Patterns, Trends, Correlations  
+  
+#### Statistical Methods  
+
+- **[ANOVA - Categorical Features'](/dsandml/dataengineering/index.qmd){target="_blank" style="text-decoration:none"}:** How do we treat the categorical features for our data science project?
+- Hypothesis Testing  
+- Probability Distributions  
+- Inferential Statistics  
+- Sampling Methods  
+
+#### Big Data Techniques  
+
+- Hadoop, Spark  
+- Distributed Data Storage  (e.g., HDFS, NoSQL)
+- Data PipeLines, ETL (Extract, Transform, Load)
+
+## **$\text{\textcolor{#782F40}{Machine Learning Algorithms}}$**  
+
+### $\text{Supervised Learning}$  
+(Training with labeled data: input-output pairs)  
+
+#### **Regression**  
+
+::::{.grid}
+:::{.g-col-6}
+##### Parametric    
+
+- [Simple Linear Regression](/dsandml/simplelinreg/index.qmd){target="_blank" style="text-decoration:none"}
+- [Multiple Linear Regression](/dsandml/multiplelinreg/index.qmd){target="_blank" style="text-decoration:none"}
+- [Polynomial Regression](/dsandml/polyreg/index.qmd){target="_blank" style="text-decoration:none"}
+:::  
+
+:::{.g-col-6}
+##### Non-Parametric  
+
+- [K-Nearest Neighbor (KNN) Regression](/dsandml/knn/index.qmd){target="_blank" style="text-decoration:none"}
+- [Decesion Trees Regression](/dsandml/decisiontree/index.qmd){target="_blank" style="text-decoration:none"}
+- [Random Forest Regression](/dsandml/randomforest/index.qmd){target="_blank" style="text-decoration:none"}
+- Support Vector Machine (SVM)
+:::
+::::  
+
+#### **Classification**  
+
+::::{.grid}
+:::{.g-col-6}
+##### Parametric    
+
+- [Logistic Regression](/dsandml/logreg/index.qmd){target="_blank" style="text-decoration:none"}
+- [Naive Bayes](/dsandml/naivebayes/index.qmd){target="_blank" style="text-decoration:none"}
+:::  
+
+:::{.g-col-6}
+##### Non-Parametric  
+
+- [KNN Classification](/dsandml/knn/index.qmd){target="_blank" style="text-decoration:none"}
+- [Decision Tree Classification](/dsandml/decisiontree/index.qmd){target="_blank" style="text-decoration:none"}
+- [Random Forest Classification](/dsandml/randomforest/index.qmd){target="_blank" style="text-decoration:none"}
+- Support Vector Machine (SVM)
+:::
+::::  
+
+
+### $\text{Unsupervised Learning}$  
+(Training with unlabeled data)  
+
+::::{.grid}
+:::{.g-col-6}
+##### Clustering      
+
+- [k-Means Clustering](/dsandml/kmeans/index.qmd){target="_blank" style="text-decoration:none"}  
+- Hierarchical Clustering  
+- DBSCAN (Density-Based Spatial Clustering)  
+- Gaussian Mixture Models (GMM)
+:::  
+
+:::{.g-col-6}
+##### Dimensionality Reduction  
+
+- [Principal Component Analysis](/dsandml/pca/index.qmd){target="_blank" style="text-decoration:none"}  
+- t-SNE (t-distributed Stochastic Neihbor Embedding)  
+- Linear Discriminant Analysis (LDA)  
+- Factor Analysis  
+- Autoencoders  
+:::  
+
+:::{.g-col-6}
+##### Anomaly Detection  
+
+- Isolation Forests  
+- One-Class SVM
+:::
+::::    
+
+### $\text{Semi-Supervised Learning}$  
+(Combination of labeled and unlabeled data)  
+
+- Self-training  
+- Co-training  
+- Label Propagation 
+
+### $\text{Reinforcement Learning}$  
+(Learning via rewards and penalties)  
+
+- Markov Decision Process (MDP)  
+- Q-Learning  
+- Deep Q-Networks (DQN)  
+- Policy Gradient Method  
+
+## **$\text{\textcolor{#782F40}{Deep Learnings}}$**  
+
+- [PyTorch](/dsandml/pytorch/index.qmd){target="_blank" style="text-decoration:none"}  
+- Artificial Neural Networks (ANN)  
+- Convolutional Neural Networks (CNN)  
+- Recurrent Neural Networks (RNN)  
+- Long Short-Term Memory (LSTM)  
+- Generative Adversarial Networks (GAN)  
+
+## **$\text{\textcolor{#782F40}{Model Evaluation and Fine Tuning}}$**  
+
+#### Model Evaluation Metrics  
+
+- **For Regression:** Mean Absolute Error (MAE), Mean Squared Error (MSE), Root Mean Squared Error (RMSE), $R^2$ score  
+- **For Classification:** Accuracy, Precision, Recall, F1 Score, ROC-AUC  
+- **Cross-validation:** kFold, Stratified k-fold, leave-one-out  
+
+#### Model Optimization  
+
+- **Bias-Variance:** [Bias Variance Trade off](/dsandml/biasvariance/index.qmd){target="_blank" style="text-decoration:none"}  
+- **Hyperparameter Tuning:** Grid Search, Random Search, Bayesian Optimization  
+- **Features Selection Techniques:** Recursive Feature Elimination (RFE), [L1 or Rasso Regurlarization](/dsandml/regularization/index.qmd){target="_blank" style="text-decoration:none"}, [L2 or Ridge Regularization](/dsandml/regularization/index.qmd){target="_blank" style="text-decoration:none"}  
+- **Model Interpretability:** SHAP (Shapley values), LIME (Local Interpretable Model-agnostic Explanations)  
+
+#### Ensemble Methods  
+
+- **Bagging:** [Random Forest](/dsandml/randomforest/index.qmd){target="_blank" style="text-decoration:none"}, Bootstrap Aggregating  
+- **Boosting:** [Gradient Boosting](/dsandml/gradientboosting/index.qmd){target="_blank" style="text-decoration:none"}, AdaBoost, XGBoost, CatBoost  
+- **Stacking:** Stacked Generalization
+
+
+<!---
 ## Machine Learning Algorithms  
 
 ```{=html}
@@ -167,8 +329,8 @@ listing:
 
 ---  
 
+-->
 
-
-
+---
 
 **You may also like**
