--- a/dsandml/logreg/index.qmd
+++ b/dsandml/logreg/index.qmd
@@ -273,7 +273,7 @@ print(np.round(accuracy_score(predicted_y, y_test),2))
 
 ::::{.columns}
 :::{.column width="10%"}
-<a href="https://www.facebook.com/sharer.php?u=https://www.mrislambd.github.io/dsandml/logreg" target="_blank" style="color:#1877F2; text-decoration: none;">
+<a href="https://www.facebook.com/sharer.php?u=https://mrislambd.github.io/dsandml/logreg/" target="_blank" style="color:#1877F2; text-decoration: none;">
  
 {{< fa brands facebook size=3x >}}
 </a>
@@ -281,7 +281,7 @@ print(np.round(accuracy_score(predicted_y, y_test),2))
 :::
  
 :::{.column width="10%"}
-<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://www.mrislambd.github.io/dsandml/logreg" target="_blank" style="color:#0077B5; text-decoration: none;">
+<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://mrislambd.github.io/dsandml/logreg/" target="_blank" style="color:#0077B5; text-decoration: none;">
  
 {{< fa brands linkedin size=3x >}}
 </a>
@@ -289,35 +289,21 @@ print(np.round(accuracy_score(predicted_y, y_test),2))
 :::
  
 :::{.column width="10%"}
-<a href="https://www.twitter.com/intent/tweet?url=https://www.mrislambd.github.io/dsandml/logreg" target="_blank" style="color:#1DA1F2; text-decoration: none;">
+<a href="https://www.twitter.com/intent/tweet?url=https://mrislambd.github.io/dsandml/logreg/" target="_blank" style="color:#1DA1F2; text-decoration: none;">
  
 {{< fa brands twitter size=3x >}}
 </a>
  
 :::
 ::::
- 
-<script src="https://giscus.app/client.js"
-        data-repo="mrislambd/mrislambd.github.io" 
-        data-repo-id="R_kgDOMV8crA"
-        data-category="Announcements"
-        data-category-id="DIC_kwDOMV8crM4CjbQW"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="bottom"
-        data-theme="light"
-        data-lang="en"
-        crossorigin="anonymous"
-        async>
-</script>
 
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
  
-<div class="fb-comments" data-href="https://mrislambd.github.io/dsandml/logreg/"
- data-width="" data-numposts="5" data-width="800"></div>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous"
+ src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
+<div class="fb-comments" data-href="https://mrislambd.github.io/dsandml/logreg/" data-width="" data-numposts="5"></div>
+
+
 
 ---
 
