--- a/dsandml/logreg/index.qmd
+++ b/dsandml/logreg/index.qmd
@@ -296,7 +296,22 @@ print(np.round(accuracy_score(predicted_y, y_test),2))
  
 :::
 ::::
-
+ 
+<script src="https://giscus.app/client.js"
+        data-repo="mrislambd/mrislambd.github.io" 
+        data-repo-id="R_kgDOMV8crA"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOMV8crM4CjbQW"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="light"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>
  
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous"
